RESOLVED FIXED302721
Null dereference of m_policyDocumentLoader in FrameLoader::continueLoadAfterNavigationPolicy()
https://bugs.webkit.org/show_bug.cgi?id=302721
Summary Null dereference of m_policyDocumentLoader in FrameLoader::continueLoadAfterN...
Sihui Liu
Reported 2025-11-18 09:40:52 PST
Attachments
Sihui Liu
Comment 1 2025-11-18 09:42:23 PST
EWS
Comment 2 2025-11-18 15:20:42 PST
Committed 303212@main (a8867a943aab): <https://commits.webkit.org/303212@main> Reviewed commits have been landed. Closing PR #54115 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.