Null dereference of m_policyDocumentLoader in FrameLoader::continueLoadAfterNavigationPolicy() rdar://164964499 https://bugs.webkit.org/show_bug.cgi?id=302721

Reviewed by Rupin Mittal, Per Arne Vollan, and Matthew Finkel.

Add a null check for m_policyDocumentLoader before accessing it.

* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::continueLoadAfterNavigationPolicy):

Canonical link: https://commits.webkit.org/303212@main